<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E9DCDC"
    android:orientation="vertical"
    android:padding="5dp">
    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>


    <EditText
        android:id="@+id/firstEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_first_name"
        android:inputType="textNoSuggestions"
        android:scrollbarStyle="outsideInset" />

    <EditText
        android:id="@+id/lastEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:theme="@style/CustomEditTextStyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:background="#4CAF50"
            android:text="Add"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#cb332d"
            android:text="@string/cancel"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>